RESOLVED FIXED103108
REGRESSION (r135455): Compilation without SVG enabled broken
https://bugs.webkit.org/show_bug.cgi?id=103108
Summary REGRESSION (r135455): Compilation without SVG enabled broken
jochen
Reported 2012-11-23 01:59:11 PST
Seems like some #if ENABLE(SVG) got lost in the refactoring Source/WebCore/platform/graphics/filters/FilterOperation.h:198:40: error: private field 'm_cachedSVGDocumentReference' is not used [-Werror,-Wunused-private-field] OwnPtr<CachedSVGDocumentReference> m_cachedSVGDocumentReference;
Attachments
Patch (2.37 KB, patch)
2012-11-23 02:03 PST, jochen
no flags
jochen
Comment 1 2012-11-23 02:03:25 PST
WebKit Review Bot
Comment 2 2012-11-23 03:23:23 PST
Comment on attachment 175755 [details] Patch Clearing flags on attachment: 175755 Committed r135583: <http://trac.webkit.org/changeset/135583>
WebKit Review Bot
Comment 3 2012-11-23 03:23:26 PST
All reviewed patches have been landed. Closing bug.
Dirk Schulze
Comment 4 2012-11-23 08:35:59 PST
Comment on attachment 175755 [details] Patch Thanks for fixing.
Note You need to log in before you can comment on or make changes to this bug.