REGRESSION (r135455): Compilation without SVG enabled broken https://bugs.webkit.org/show_bug.cgi?id=103108

Reviewed by Yury Semikhatsky.

Move SVG-only code behind #if ENABLE(SVG) that was accidentially moved
outside of the #if block during the refactoring.

* platform/graphics/filters/FilterOperation.h:
(ReferenceFilterOperation):


Canonical link: https://commits.webkit.org/121244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135583 268f45cc-cd09-0410-ab3c-d52691b4dbfc